# asm_embed_ocaml

./: .gitignore  .gitmodules  Makefile  build.sh  build_mincaml.sh  calling_convention.c  cc.c  lib.c  main.c  mincaml_part.ml  mincaml_part.s  mincaml_part_array.s
call_caml_from_c/: Makefile  main
dylink/: build.sh  fact.ml  fact_stub.ml  main.ml
dylink/asm-c-ocaml/: Makefile  add.s  build.sh  interop.c  interp.ml  libmincaml.S  loadee.c  loader.c  loader.ml  loader_stub.c  main.c  main.ml
etc/: cc.c
ffi/: Makefile  ml_part.ml
ffi-mincaml/: .gitignore  Makefile  add.s  hash_table.c  hash_table.h  interp.ml  lib.c  libmincaml.S  main.c  map.c  mod.ml  modwrap.c  modwrap.h  runtime.c  sub.s
ffi-mincaml/test/: test.c
ffi_mincaml/: Makefile  add.ml  lib.c  map.h  mod.ml  modwrap.c
integration/: c_part.c  mincaml_part.mc.ml  ml_part_interop.s  ocaml_mincaml_interop.install  stub.c
ocaml-c-mincaml/: Makefile  build_mincaml.sh  c_part.c  dune  lib.c  mincaml_part.mc.ml  mincaml_part.ml  mincaml_part.s  ml_part.ml  ml_part_interop.s  stub.c
str_manipulation/: Makefile  main.c  mod.ml  modwrap.c  modwrap.h
